# diffusion-policy-mlx

./: .gitignore  CLAUDE.md  PROMPT.md  README.md  SESSION_RESTART.md  UPSTREAM_VERSION.md  pyproject.toml
.claude/: CLAUDE.md
configs/: pusht_diffusion_policy_cnn.yaml  pusht_diffusion_policy_transformer.yaml  pusht_lowdim_diffusion_policy_cnn.yaml
examples/: 01_quickstart.py  02_noise_visualization.py  03_train_synthetic.py  04_scheduler_comparison.py  05_weight_conversion.py  06_resnet_features.py
prds/: BUILD_ORDER.md  PRD-00-dev-environment.md  PRD-01-compat-foundation.md  PRD-02-vision-encoder.md  PRD-03-unet-denoiser.md  PRD-04-ddpm-scheduler.md  PRD-05-policy-assembly.md  PRD-06-training-loop.md  PRD-07-pusht-dataset.md  PRD-08-evaluation.md
scripts/: benchmark.py  convert_weights.py  download_pusht.py  eval_pusht.py
src/diffusion_policy_mlx/: __init__.py
src/diffusion_policy_mlx/common/: __init__.py  dict_util.py  json_logger.py  metal_utils.py  pytorch_util.py
src/diffusion_policy_mlx/compat/: __init__.py  einops_mlx.py  functional.py  nn_layers.py  nn_modules.py  schedulers.py  tensor_ops.py  vision.py
src/diffusion_policy_mlx/dataset/: __init__.py  (+4 more)
tests/: conftest.py  test_benchmark.py  test_common_utils.py  test_compat_nn_layers.py  test_compat_tensor_ops.py  test_conv1d_components.py  test_dataset.py  test_examples.py  test_integration.py  test_lowdim_policies.py  test_normalizer.py  test_policy.py  test_pusht_env.py  test_schedulers.py  test_training.py  test_transformer.py  test_unet.py  test_vision_encoder.py  test_weight_conversion.py
(+29 files in other folders)
